# jsbm

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  build.config.js  build.js  index.ts  package-lock.json  package.json  tsconfig.json
src/: consts.ts  create.code.ts  index.ts  macro.ts  main.rs  print.code.ts  util.ts
src/parser/: mod.rs  rules.pest
src/util/: args.rs  mod.rs  wrapper.rs
test/: benchmark.ts  index.ts
tests/: benchmark.ts  index.ts  readme.example.ts  time.exact.ts
